[gd_scene load_steps=16 format=2]

[ext_resource path="res://Resources/Misc/Minecraft.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/StatsDisplay.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.862745, 0.717647, 0.00392157, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.831373, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0.831373, 0, 1 )

[sub_resource type="DynamicFont" id=7]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.635294, 0.0235294, 0.0235294, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.882353, 0.0156863, 0.0156863, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.882353, 0.0156863, 0.0156863, 1 )

[sub_resource type="DynamicFont" id=11]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 40
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]

[node name="Background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 800.0
color = Color( 0.905882, 0.298039, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="."]
margin_top = 14.0
margin_right = 1278.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsDisplay" type="Control" parent="."]
margin_top = 106.0
margin_right = 1277.0
margin_bottom = 146.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="StatsDisplay"]
margin_top = 122.0
margin_right = 1278.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 2 )
text = "FINAL SCORE: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="StatsDisplay"]
margin_top = 165.0
margin_right = 1275.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 3 )
text = "YOU REACHED LEVEL: "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Revive" type="Button" parent="StatsDisplay"]
margin_left = 384.0
margin_top = 454.0
margin_right = 576.0
margin_bottom = 533.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "REVIVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="StatsDisplay"]
margin_left = 704.0
margin_top = 454.0
margin_right = 896.0
margin_bottom = 534.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReviveInfo" type="Label" parent="StatsDisplay"]
margin_left = 397.0
margin_top = 540.0
margin_right = 563.0
margin_bottom = 556.0
custom_fonts/font = SubResource( 12 )
text = "REQUIRES 10 COINS"

[node name="YouDied" type="Label" parent="."]
margin_top = 80.0
margin_right = 1278.0
margin_bottom = 133.0
custom_fonts/font = SubResource( 13 )
text = "YOU DIED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StatsDisplay/Revive" to="StatsDisplay" method="_on_Revive_pressed"]
[connection signal="pressed" from="StatsDisplay/Quit" to="StatsDisplay" method="_on_Quit_pressed"]
